--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,21 @@
 version: '3'
 
 services:
+  auth:
+    image: "movicruiser-auth"
+    ports:
+      - "8081:80"
+    depends_on:
+      - db
+    environment:
+      SQLSERVER_AUTH: "Data source=db;Initial catalog=UserDb;User id=sa;Password=P@ssw0rd"
   web:
-    image: "moviecruiser"
+    image: "moviecruiser-secured"
     ports:
       - "8089:80"
     links:
       - db
+      - auth
     environment:
       SQLSERVER_MOVIE: "Data source=db;Initial catalog=MovieDb;User id=sa;Password=P@ssw0rd"
   ui:
@@ -20,3 +29,7 @@ services:
     environment:
       SA_PASSWORD: "P@ssw0rd"
       ACCEPT_EULA: "Y"
+networks: 
+  default:
+    external:
+      name: nat
