--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "json-server": "^0.14.0",
+    "jwt-decode": "^2.2.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
